# SDRX-Mimic

./: .SRCINFO  .gitignore  Cargo.toml  EXTENSIONS.md  LICENSE  PKGBUILD  README.md
ejemplos-extensiones/hola-mundo/: main.lua  manifest.toml
src/: app.rs  main.rs  modes.rs
src/config/: mod.rs  settings.rs  theme.rs
src/events/: mod.rs
src/extensions/: hooks.rs  lua_runtime.rs  manifest.rs  mod.rs  rhai_runtime.rs  runtime.rs
src/ui/: extension_list.rs  file_browser.rs  home.rs  images.rs  layout.rs  mod.rs  new_vault_dialog.rs  preview.rs  settings.rs  sidebar.rs  tabs.rs  theme_editor.rs  wrap.rs
src/vault/: links.rs  mod.rs  note.rs  tree.rs
