[package]
name = "sdrx-mimic"
version = "0.1.0"
edition = "2021"
description = "SDRX Mimic — TUI vault editor with extension support"

[[bin]]
name = "mimic"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["crossterm"] }
pulldown-cmark = "0.12"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
regex = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rhai = "1"
